--- a/index.html
+++ b/index.html
@@ -166,5 +166,6 @@
         <h1>Happy Birthday!</h1>
         <p>Vivian</p>
     </div>
+    <audio src="happy_birthday.mid" autoplay="autoplay" loop="loop"></audio>
 </body>
 </html>
