--- a/index.html
+++ b/index.html
@@ -166,6 +166,6 @@
         <h1>Happy Birthday!</h1>
         <p>Vivian</p>
     </div>
-    <audio src="happy_birthday.mid" autoplay="autoplay" loop="loop"></audio>
+    <audio src="happy_birthday_to_you.mp3" autoplay="autoplay" loop="loop"></audio>
 </body>
 </html>
