--- a/index.html
+++ b/index.html
@@ -166,11 +166,6 @@
         <h1>Happy Birthday!</h1>
         <p>Vivian</p>
     </div>
-    <script src="js/MIDI.min.js"></script>
-    <script>
-        window.onload = function () {
-            MIDI.Player.loadFile("happy_birthday.mid", MIDI.Player.start);
-        }
-    </script>
+    <audio src="happy_birthday_to_you.mp3" autoplay="autoplay" loop="loop"></audio>
 </body>
 </html>
